plugins {
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    id 'net.minecraftforge.gradle' version '[6.0,6.2)'
}

version = mod_version
group = mod_group_id

base { archivesName = mod_id }
java.toolchain.languageVersion = JavaLanguageVersion.of(17)

minecraft {
    mappings channel: mapping_channel, version: mapping_version
    copyIdeResources = true
    runs {
        configureEach {
            workingDirectory project.file('run')
            mods {
                "${mod_id}" { source sourceSets.main }
            }
        }
        client {}
        server {
            args '--nogui'
        }
    }
}

dependencies {
    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
    testImplementation platform('org.junit:junit-bom:5.11.4')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testImplementation 'com.google.code.gson:gson:2.11.0'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('processResources', ProcessResources).configure {
    def properties = [minecraft_version_range: minecraft_version_range, forge_version_range: forge_version_range,
                      loader_version_range: loader_version_range, mod_id: mod_id, mod_name: mod_name,
                      mod_license: mod_license, mod_version: mod_version, mod_authors: mod_authors,
                      mod_description: mod_description]
    inputs.properties properties
    filesMatching('META-INF/mods.toml') { expand properties }
}

tasks.withType(JavaCompile).configureEach { options.encoding = 'UTF-8' }
tasks.named('test') { useJUnitPlatform() }
